# montecarlo-dcf

./: .gitignore  app.py  app.pystreamlit run app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
dcf/: __init__.py  deterministics.py  models.py  simulate.py
