[project]
name = "montecarlo-dcf"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "ruff>=0.12.12",
    "scipy>=1.16.1",
    "streamlit>=1.49.1",
    "yfinance>=0.2.65",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]
ignore = ["E501"]
